RESOLVED FIXED160721
[JSC] TinyPtrSet::deleteListIfNecessary() no longer needs to test for reservedValue
https://bugs.webkit.org/show_bug.cgi?id=160721
Summary [JSC] TinyPtrSet::deleteListIfNecessary() no longer needs to test for reserve...
Benjamin Poulain
Reported 2016-08-09 17:16:04 PDT
[JSC] TinyPtrSet::deleteListIfNecessary() no longer needs to test for reservedValue
Attachments
Patch (1.79 KB, patch)
2016-08-09 17:27 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2016-08-09 17:27:43 PDT
Benjamin Poulain
Comment 2 2016-08-10 14:24:48 PDT
Comment on attachment 285700 [details] Patch Clearing flags on attachment: 285700 Committed r204354: <http://trac.webkit.org/changeset/204354>
Benjamin Poulain
Comment 3 2016-08-10 14:24:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.